# pylem

./: .appveyor.yml  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  _debug_hints.txt  pyproject.toml  setup.py
morph_holder/: __init__.py
pylem/: CMakeLists.txt  __init__.py  pylem_binary.py  setup.py
pylem/binding/: main.cpp
pylem/tests/: test_misspell.py  tests.py  tests_morph_source.py
src/: main.cpp
tests/: tests.py
